--- a/index.html
+++ b/index.html
@@ -103,3 +103,58 @@
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>فروشگاه هنزا مارکت</title>
+
+  <!-- لینک به استایل خارجی -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- فونت فارسی حرفه‌ای -->
+  <link href="https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+</head>
+<body>
+
+  <!-- منو بالا -->
+  <nav class="navbar">
+    <div class="logo">هنزا مارکت</div>
+    <div class="menu">
+      <a href="#">خانه</a>
+      <a href="#">محصولات</a>
+      <a href="#">درباره ما</a>
+      <a href="#">تماس</a>
+    </div>
+  </nav>
+
+  <!-- بنر خوش آمدگویی -->
+  <section class="hero">
+    <h1>به هنزا مارکت خوش آمدید</h1>
+    <p>مرجع ابزارهای برش سنگ و سرامیک</p>
+  </section>
+
+  <!-- محصولات -->
+  <section class="container">
+    <div class="products">
+      <div class="product">
+        <img src="https://i.imgur.com/VV9eS4Q.png" alt="بشکن">
+        <h2>بشکن نسل جدید</h2>
+        <p>برش دقیق و روان</p>
+        <p class="price">۲۳۰,۰۰۰ تومان</p>
+        <button>افزودن به سبد</button>
+      </div>
+      <!-- بقیه محصولات -->
+    </div>
+  </section>
+
+  <footer>
+    طراحی شده توسط هنزا مارکت | تماس: 0912XXXXXXX
+  </footer>
+
+  <!-- لینک به اسکریپت -->
+  <script src="script.js"></script>
+</body>
+</html>
