--- a/index.html
+++ b/index.html
@@ -158,3 +158,73 @@
   <script src="script.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>فروشگاه هنزا مارکت</title>
+
+  <!-- فونت فارسی حرفه‌ای -->
+  <link href="https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css" rel="stylesheet" />
+
+  <!-- آیکن‌ها -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- فایل استایل -->
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <!-- نوار بالا -->
+  <nav class="navbar">
+    <div class="logo">هنزا مارکت</div>
+    <div class="menu">
+      <a href="#">خانه</a>
+      <a href="#">محصولات</a>
+      <a href="#">درباره ما</a>
+      <a href="#">تماس</a>
+    </div>
+  </nav>
+
+  <!-- بنر خوش‌آمدگویی -->
+  <section class="hero">
+    <h1>ابزار حرفه‌ای برای کار حرفه‌ای</h1>
+    <p>فروشگاه تخصصی سنگ و سرامیک</p>
+  </section>
+
+  <!-- بخش محصولات -->
+  <section class="container">
+    <div class="products">
+      <div class="product">
+        <img src="https://i.imgur.com/VV9eS4Q.png" alt="بشکن" />
+        <h2>بشکن نسل جدید</h2>
+        <p>برش دقیق و روان</p>
+        <p class="price">۲۳۰,۰۰۰ تومان</p>
+        <button class="add-to-cart">افزودن به سبد</button>
+      </div>
+      <div class="product">
+        <img src="https://i.imgur.com/W6bGiRu.jpg" alt="سرامیک بر" />
+        <h2>سرامیک بر دستی شیجینگ</h2>
+        <p>مناسب برای انواع سرامیک</p>
+        <p class="price">۵۸۰,۰۰۰ تومان</p>
+        <button class="add-to-cart">افزودن به سبد</button>
+      </div>
+      <div class="product">
+        <img src="https://i.imgur.com/xu3Rt60.jpg" alt="الماس" />
+        <h2>الماس خودکاری هنزا</h2>
+        <p>بدنه فلزی، نیش تیز و بادوام</p>
+        <p class="price">۱۳۰,۰۰۰ تومان</p>
+        <button class="add-to-cart">افزودن به سبد</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- پاورقی -->
+  <footer>
+    طراحی شده توسط هنزا مارکت | تماس: 0912XXXXXXX
+  </footer>
+
+  <!-- فایل جاوااسکریپت -->
+  <script src="script.js"></script>
+</body>
+</html>
