--- a/index.html
+++ b/index.html
@@ -228,3 +228,42 @@
   <script src="script.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>تماس با ما - هنزا مارکت</title>
+  <link href="https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <nav class="navbar">
+    <div class="logo">هنزا مارکت</div>
+    <div class="menu">
+      <a href="index.html">خانه</a>
+      <a href="contact.html">تماس با ما</a>
+    </div>
+  </nav>
+
+  <section class="container">
+    <h1>تماس با ما</h1>
+    <form class="contact-form">
+      <label>نام کامل:</label>
+      <input type="text" placeholder="مثلاً علی رضایی" required />
+
+      <label>شماره تماس:</label>
+      <input type="tel" placeholder="09xxxxxxxxx" required />
+
+      <label>پیام شما:</label>
+      <textarea rows="5" placeholder="متن پیام شما..." required></textarea>
+
+      <button type="submit">ارسال پیام</button>
+    </form>
+  </section>
+
+  <footer>
+    طراحی شده توسط هنزا مارکت | تماس: 0912XXXXXXX
+  </footer>
+</body>
+</html>
