--- a/index.html
+++ b/index.html
@@ -672,3 +672,43 @@ const analytics = getAnalytics(app);
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+  <meta charset="UTF-8">
+  <title>ورود به پنل مدیریت</title>
+  <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-auth-compat.js"></script>
+</head>
+<body>
+  <h2>ورود مدیر</h2>
+  <input type="email" id="email" placeholder="ایمیل">
+  <input type="password" id="password" placeholder="رمز عبور">
+  <button onclick="login()">ورود</button>
+  <p id="error" style="color: red;"></p>
+
+  <script>
+    // مقدارهای پروژه‌ات رو اینجا بذار (از Firebase Console بخش Project Settings بگیر)
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_AUTH_DOMAIN",
+      projectId: "YOUR_PROJECT_ID",
+      // بقیه اطلاعات config رو از Firebase بگیر و اینجا بذار
+    };
+
+    firebase.initializeApp(firebaseConfig);
+
+    function login() {
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      firebase.auth().signInWithEmailAndPassword(email, password)
+        .then((userCredential) => {
+          window.location.href = "admin.html"; // پنل مدیریت اصلی
+        })
+        .catch((error) => {
+          document.getElementById('error').textContent = error.message;
+        });
+    }
+  </script>
+</body>
+</html>
