--- a/admin.html
+++ b/admin.html
@@ -1,147 +1,98 @@
-<!DOCTYPE html>
-<html lang="fa">
+<!DOCTYPE html><html lang="fa">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>پنل مدیریت - هنزا مارکت</title>
+  <title>ورود مدیر | هنزا مارکت</title>
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Tahoma, sans-serif;
-      direction: rtl;
-      background: #f4f4f4;
-      padding: 20px;
+      margin: 0;
+      font-family: 'Vazirmatn', sans-serif;
+      background: linear-gradient(135deg, #343a40, #212529);
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
-    h1 {
-      color: #333;
+    .login-box {
+      background: #2c3036;
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+      width: 100%;
+      max-width: 400px;
+    }
+    .login-box h2 {
+      margin-bottom: 25px;
+      font-size: 24px;
       text-align: center;
     }
-    .form-box {
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      max-width: 600px;
-      margin: auto;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-    }
-    .form-box input, .form-box textarea {
+    .login-box input {
       width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-    }
-    .form-box button {
-      padding: 10px 20px;
+      padding: 12px;
+      margin: 10px 0;
       border: none;
       border-radius: 8px;
-      background: #28a745;
-      color: white;
+      background: #495057;
+      color: #fff;
+      font-size: 16px;
+    }
+    .login-box button {
+      width: 100%;
+      padding: 12px;
+      background: #00c896;
+      border: none;
+      border-radius: 8px;
+      color: #fff;
+      font-size: 16px;
       cursor: pointer;
+      transition: background 0.3s ease;
     }
-    .logout {
+    .login-box button:hover {
+      background: #00a17a;
+    }
+    .error {
+      color: #ff6b6b;
+      margin-top: 10px;
       text-align: center;
-      margin-top: 20px;
-    }
-    .logout button {
-      background: #dc3545;
     }
   </style>
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore-compat.js"></script>
-  <script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js"></script>
+</head>
+<body>
+  <div class="login-box">
+    <h2>ورود مدیر سایت</h2>
+    <input type="email" id="email" placeholder="ایمیل مدیر">
+    <input type="password" id="password" placeholder="رمز عبور">
+    <button onclick="loginAdmin()">ورود</button>
+    <div class="error" id="error"></div>
+  </div>  <script>
     const firebaseConfig = {
-      apiKey: "اینجا_مقدار_خودت_را_بذار",
-      authDomain: "اینجا_مقدار_خودت_را_بذار",
-      projectId: "اینجا_مقدار_خودت_را_بذار",
+      apiKey: "AIzaSyCLLxGoXKHON91hM4VlztO_Bme4L2UFxz4",
+      authDomain: "heneza-6e5c4.firebaseapp.com",
+      projectId: "heneza-6e5c4",
+      storageBucket: "heneza-6e5c4.firebasestorage.app",
+      messagingSenderId: "1076999155269",
+      appId: "1:1076999155269:web:e0b9faef9b0cecb3f97d2c"
     };
+
     firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-    firebase.auth().onAuthStateChanged(user => {
-      if (!user) {
-        window.location.href = "index.html";
-      }
-    });
-  </script>
-</head>
-<body>
+    const auth = firebase.auth();
 
-<h1>پنل مدیریت هنزا مارکت</h1>
+    function loginAdmin() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      const errorDiv = document.getElementById("error");
 
-<div class="form-box">
-  <h3>افزودن محصول جدید</h3>
-  <input type="text" id="title" placeholder="نام محصول">
-  <textarea id="description" placeholder="توضیحات محصول"></textarea>
-  <input type="text" id="price" placeholder="قیمت (تومان)">
-  <input type="text" id="imageUrl" placeholder="آدرس عکس محصول (URL)">
-  <button onclick="addProduct()">ثبت محصول</button>
-  <p id="message"></p>
-</div>
-
-<div class="logout">
-  <button onclick="logout()">خروج از حساب</button>
-</div>
-
-<script>
-  function addProduct() {
-    const title = document.getElementById("title").value;
-    const description = document.getElementById("description").value;
-    const price = document.getElementById("price").value;
-    const imageUrl = document.getElementById("imageUrl").value;
-
-    if (!title  !price  !imageUrl) {
-      document.getElementById("message").textContent = "لطفاً تمام فیلدها را پر کنید.";
-      return;
+      auth.signInWithEmailAndPassword(email, password)
+        .then(() => {
+          window.location.href = "admin.html";
+        })
+        .catch((error) => {
+          errorDiv.textContent = "ورود ناموفق: ایمیل یا رمز اشتباه است.";
+        });
     }
-
-    db.collection("products").add({
-      title,
-      description,
-      price,
-      imageUrl,
-      createdAt: firebase.firestore.FieldValue.serverTimestamp()
-    }).then(() => {
-      document.getElementById("message").textContent = "محصول با موفقیت اضافه شد.";
-      document.getElementById("title").value = "";
-      document.getElementById("description").value = "";
-      document.getElementById("price").value = "";
-      document.getElementById("imageUrl").value = "";
-    }).catch(err => {
-      document.getElementById("message").textContent = "خطا در افزودن محصول.";
-    });
-  }
-
-  function logout() {
-    firebase.auth().signOut().then(() => {
-      window.location.href = "index.html";
-    });
-  }
-</script>
-
-</body>
-</html>
-function logout() {
-  firebase.auth().signOut().then(() => window.location.href = "index.html");
-}
-
-window.onload = loadProducts;
-
-  </script>
-</head>
-<body>
-<header>پنل مدیریت محصولات - هنزا مارکت</header>
-<div class="container">
-  <div class="form">
-    <h3>افزودن محصول جدید</h3>
-    <input type="text" id="title" placeholder="نام محصول">
-    <textarea id="description" placeholder="توضیحات"></textarea>
-    <input type="text" id="price" placeholder="قیمت">
-    <input type="text" id="imageUrl" placeholder="آدرس عکس">
-    <button onclick="addProduct()">ثبت محصول</button>
-  </div>  <div class="product-list" id="productList"></div>  <div class="logout">
-    <button onclick="logout()">خروج از حساب</button>
-  </div>
-</div>
-</body>
+  </script></body>
 </html>
