--- a/admin.html
+++ b/admin.html
@@ -154,5 +154,8 @@
       appId: "1:1076999155269:web:e0b9faef9b0cecb3f97d2c"
     };
     firebase.initializeApp(firebaseConfig);
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   </script>  <!-- فایل جاوااسکریپت اصلی -->  <script src="script.js"></script></body>
 </html>
